--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,33 @@
         android:theme="@style/Theme.Gym_Project"
         android:usesCleartextTraffic="true">
         <activity
+            android:name="._Members_Profile"
+            android:exported="true" />
+        <activity
+            android:name="._Nutritios_chooser"
+            android:exported="true" />
+        <activity
+            android:name=".Workout_member"
+            android:exported="true" />
+        <activity
+            android:name=".MembersPage"
+            android:exported="true" />
+        <activity
+            android:name=".EmployeePart"
+            android:exported="true" />
+        <activity
+            android:name=".nutritiondetails"
+            android:exported="true" />
+        <activity
+            android:name=".Nutrition"
+            android:exported="true" />
+        <activity
+            android:name=".UpdateworkoutsS"
+            android:exported="true" />
+        <activity
+            android:name=".addworkoutschadual"
+            android:exported="true" />
+        <activity
             android:name=".ManageMembership"
             android:exported="true" />
         <activity
@@ -25,7 +52,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
-
         <activity
             android:name=".membersDetails"
             android:exported="true" />
@@ -36,7 +62,10 @@
             android:name=".addmempers"
             android:exported="true" />
         <activity
-            android:name=".EmployeePart"
+            android:name=".Workout"
+            android:exported="true" />
+        <activity
+            android:name="._MemberShipChooser"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
