--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Gym_Project"
         android:usesCleartextTraffic="true">
         <activity
+            android:name="._MemberShipChooser"
+            android:exported="true" />
+        <activity
             android:name="._Members_Profile"
             android:exported="true" />
         <activity
@@ -65,7 +68,7 @@
             android:name=".Workout"
             android:exported="true" />
         <activity
-            android:name="._MemberShipChooser"
+            android:name="._GymActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
